# proof

./: CMakeLists.txt  README.md
cmake/: FindRoot.cmake  FindXRootD.cmake  PROOFDefaults.cmake  PROOFOSDefs.cmake  PROOFSystemCheck.cmake  PROOFUtils.cmake  RootNewMacros.cmake
config/: proofserv.in
src/: CMakeLists.txt
src/main/: xpdtest.cxx
src/pq2/: CMakeLists.txt
src/proof/: CMakeLists.txt  ProofProtocol.h  TDSet.cxx  TDataSetManagerAliEn.cxx  TProof.cxx  TProof.h  TProofMgr.cxx  TProofMgr.h  TProofResourcesStatic.cxx  TProofServ.h  TProofServLite.cxx  TSelVerifyDataSet.h  TSlave.h
src/proof/inc/: LinkDef.h  TDataSetManagerAliEn.h  TDataSetManagerFile.h  TProof.h  TProofLite.h  TProofNodeInfo.h  TProofOutputFile.h  TProofServ.h~  TSlaveLite.h  TVirtualProofPlayer.h
src/proof/src/: TCondor.cxx  TDataSetManager.cxx  TDataSetManagerFile.cxx  TProof.cxx  TProof.cxx.orig  TProofLite.cxx  TProofMgrLite.cxx  TProofNodeInfo.cxx  TProofOutputFile.cxx  TProofOutputFile.cxx~  TProofServ.cxx  TProofServ.cxx.orig  TProofServ.cxx~  TSlave.cxx  TSlaveLite.cxx
src/proofbench/: CMakeLists.txt  TProofBench.cxx  TProofBench.h  TProofBenchRun.h
src/proofbench/src/: TProofBench.cxx~  TProofBenchRunCPU.cxx  TProofBenchRunDataRead.cxx  TSelEvent.cxx  TSelEventGen.cxx
src/proofd/: CMakeLists.txt  XrdProofConn.cxx  XrdProofGroup.cxx  XrdProofWorker.h  XrdProofdAdmin.cxx  XrdProofdAux.cxx  XrdProofdAux.h  XrdProofdClient.cxx  XrdProofdClientMgr.h  XrdProofdConfig.cxx  XrdProofdPlatform.h  XrdProofdProofServ.cxx  XrdProofdProofServ.h  XrdProofdProofServMgr.cxx  XrdProofdProofServMgr.h  XrdProofdProtocol.cxx  XrdProofdResponse.cxx  XrdProofdResponse.h  XrdProofdTrace.h  XrdROOT.cxx  proofd.cxx
src/proofd/inc/: XrdProofdClient.h  XrdProofdManager.h  XrdProofdXrdVers.h.rej
src/proofd/src/: XrdProofSched.cxx  XrdProofWorker.cxx  XrdProofdClientMgr.cxx  XrdProofdLauncher.cxx  XrdProofdManager.cxx  XrdProofdNetMgr.cxx  XrdProofdPriorityMgr.cxx  proofexecv.cxx
src/proofplayer/: CMakeLists.txt  TEventIter.h  TPacketizerUnit.h  TPerfStats.cxx  TProofDraw.cxx  TProofPlayer.h  TProofPlayerLite.cxx  TVirtualPacketizer.cxx
src/proofplayer/inc/: LinkDef.h  TStatus.h  TVirtualPacketizer.h
src/proofplayer/src/: TEventIter.cxx  TPacketizerUnit.cxx  TPerfStats.cxx  TProofDraw.cxx  TProofPlayer.cxx  (+2 more)
src/proofx/: CMakeLists.txt  TXSlave.cxx  TXSlave.h  TXSocket.cxx
(+19 files in other folders)
